-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 18, 19
-
Component/s: hotspot
-
b24
-
x86_64
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8288807 | 17.0.5-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b01 |
| JDK-8289133 | 17.0.5 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8288808 | 11.0.17-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b01 |
| JDK-8290436 | 11.0.17 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
jdk/incubator/vector/Float128VectorTests.java
Here's a snippet from the log file:
===============================================
jdk/incubator/vector/Float128VectorTests.java
Total tests run: 2501, Passes: 2500, Failures: 1, Skips: 0
===============================================
----------System.err:(15/928)----------
WARNING: Using incubator modules: jdk.incubator.vector
java.lang.Exception: failures: 1
at com.sun.javatest.regtest.agent.TestNGRunner.main(TestNGRunner.java:96)
at com.sun.javatest.regtest.agent.TestNGRunner.main(TestNGRunner.java:54)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:568)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:833)
JavaTest Message: Test threw exception: java.lang.Exception: failures: 1
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.Exception: failures: 1
----------rerun:(47/5389)*----------
Unfortunately the failure occurred in the elided portion of the log file:
test Float128VectorTests.EQFloat128VectorTestsBroadcastLongSmokeTest(float[cornerCaseValue(i)], float[i - 2]): success
test Float128VectorTests.EQFloat128VectorTestsBroadcastLongSmokeTest(float[cornerCaseValue(i)], float[zigZag(i)]): success
test Float128VectorTests.EQFloat128VectorTestsBroadcastLongSmokeTest(float[cornerCaseValue(i)], float[cornerCaseValue(i)]): success
test Float128VectorTests.EQFloat128VectorTestsBroadcastMaskedSmokeTest(float[i], float[i], mask[i % 2]):
...
Output overflow:
JT Harness has limited the test output to the text
at the beginning and the end, so that you can see how the
test began, and how it completed.
If you need to see more of the output from the test,
set the system property javatest.maxOutputSize to a higher
value. The current value is 100000
...
- backported by
-
JDK-8288807 jdk/incubator/vector/Float128VectorTests.java failed a subtest
-
- Resolved
-
-
JDK-8288808 jdk/incubator/vector/Float128VectorTests.java failed a subtest
-
- Resolved
-
-
JDK-8289133 jdk/incubator/vector/Float128VectorTests.java failed a subtest
-
- Resolved
-
-
JDK-8290436 jdk/incubator/vector/Float128VectorTests.java failed a subtest
-
- Resolved
-
- relates to
-
JDK-8140779 Code generation fixes for avx512
-
- Closed
-
- links to
-
Commit
openjdk/jdk11u-dev/39eecbf0
-
Commit
openjdk/jdk17u-dev/25059b28
-
Commit
openjdk/jdk/b0892295
-
Review
openjdk/jdk11u-dev/1231
-
Review
openjdk/jdk17u-dev/490
-
Review
openjdk/jdk18u/162
-
Review
openjdk/jdk/8690