8271078: jdk/incubator/vector/Float128VectorTests.java failed a subtest

Reviewed-by: mdoerr
Backport-of: b0892295ee12c0c58c0121ff7f5f585b32d60eeb